# MeshCraft

./: CMakeLists.txt  README.md
Plugins/MeshFile/: CMeshFile.cpp  CMeshFile.h  CPluginFile.def  MeshFile.dsp
Plugins/SMDFile/: CPluginFile.def  CSMDFile.cpp  CSMDFile.h  SMDFile.dsp
msvc/: MeshCraft.dsp  MeshCraft.dsw
resource/: resource.h  resource.rc
source/: CApplication.cpp  CApplication.h  CBaseConfig.cpp  CBaseConfig.h  CBaseDialog.cpp  CBaseDialog.h  CBaseObject.cpp  CBaseObject.h  CBasePlugin.cpp  CBasePlugin.h  CBaseTool.cpp  CBaseTool.h  CBaseView.cpp  CBaseView.h  CCamera.cpp  CCamera.h  CConfigManager.cpp  CConfigManager.h  CDialogAbout.cpp  CDialogAbout.h  CDialogManager.cpp  CDialogManager.h  CDialogPlugins.cpp  CDialogPlugins.h  CFilePlugin.cpp  CLight.cpp  CLight.h  CPluginFile.h  CPluginManager.cpp  CPluginManager.h  CScene.cpp  CScene.h  CTextureManager.cpp  CTextureManager.h  CToolCamera.cpp  CToolCamera.h  CToolManager.cpp  CToolManager.h  CView3D.cpp  CView3D.h  (+8 more)
